# path-tracer

./: .gitignore  CMakeLists.txt  README.md
libs/: cgltf.h
libs/pcg/: pcg_extras.hpp  pcg_random.hpp  pcg_uint128.hpp
models/: cornell-box.gltf  cube.gltf  demo.gltf  dielectrics.gltf  monkey-pile.gltf  planes.gtlf  point-lights.gltf  street-lights.gltf  table-and-papers.gltf  triangles.gltf  utah-teapot.gltf
src/: brdf.hpp  camera.hh  camera.hpp  hit.hh  hit.hpp  light.cpp  light.hpp  main.cc  main.cpp  material.cpp  material.hpp  math.hh  parse-args.cpp  parse-args.hpp  parse-gltf.cpp  parse-gltf.hpp  ray.hh  ray.hpp  sampling.hpp  scene.cpp  scene.hh  scene.hpp  trace.cpp  trace.hpp  triangle.cpp  triangle.hh  triangle.hpp  vec3.hh
src/math/: constants.hpp  quaternion.hpp  rng.hpp  utility.hpp  vec3.cpp  vec3.hpp
